--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;700&display=swap');
 
 html,
 body {
-  font-family: 'Kumbh Sans', sans-serif;
+  font-family: 'Prompt', sans-serif;
   background-color: var(--background);
   color: var(--text-color);
   transition: 200ms;
